# mdreview

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
openspec/changes/archive/2026-02-21-diff-between-rounds/: design.md.review.json  proposal.md.review.json  tasks.md.review.json
openspec/changes/archive/2026-02-21-diff-between-rounds/specs/inline-comments/: spec.md.review.json
openspec/changes/archive/2026-02-21-diff-between-rounds/specs/round-diff/: spec.md.review.json
openspec/changes/archive/2026-02-21-distinct-comment-indicator-color/: design.md.review.json
openspec/changes/archive/2026-02-21-edit-existing-comment/: design.md.review.json  proposal.md.review.json  tasks.md.review.json
openspec/changes/archive/2026-02-21-edit-existing-comment/specs/comment-editing/: spec.md.review.json
openspec/changes/archive/2026-02-21-fix-status-bar-and-gutter-dot/: design.md.review.json  proposal.md.review.json  tasks.md.review.json
openspec/changes/archive/2026-02-21-markdown-review-tui/: design.md.review.json
openspec/changes/archive/2026-02-23-decouple-app-operations/: design.md.review.json  proposal.md.review.json
openspec/specs/inline-comments/: spec.md
openspec/specs/round-diff/: spec.md
src/mdreview/: app.py  cli.py  diff.py  markdown.py  mermaid.py  models.py  operations.py  storage.py
src/mdreview/widgets/: comment_input.py  comment_popover.py  file_selector.py  help_overlay.py
tests/: conftest.py  test_diff.py  test_operations.py  test_storage.py
(+6 files in other folders)
